--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <label for="category">Categoria:</label>
     <select id="category" required>
-      <option value="banho">Banho</option>
-      <option value="cozinha">Cozinha</option>
-      <option value="limpeza">Limpeza</option>
+      <option value="Banho">Banho</option>
+      <option value="Cozinha">Cozinha</option>
+      <option value="Limpeza">Limpeza</option>
     </select>
 
     <button type="submit">Salvar</button>
