--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerenciamento de Gastos de Água</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <h1>Gerenciamento de Gastos de Água</h1>
@@ -40,6 +40,6 @@
     <div id="expenseAnalysis"></div>
   </div>
 
-  <script src="./script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
